# tunable-cap

./: .gitignore  Breakout-v5-action_space.csv  README.md  _tmp_nvidia_cosmos_reason1_7b.py  breakout_utilities.py  pyproject.toml  test_cosmos.py  test_cosmos_system.py  test_eagle.py  test_gemma.py  test_handwritten_policy.py  test_molmo_system.py  test_nemo_system.py  test_policy.py
scripts/: _tmp_kwai_keye_keye_vl_8b_preview_closed_loop.py  _tmp_nvidia_cosmos_reason1_7b_closed_loop.py  _tmp_nvidia_cosmos_reason1_7b_closed_loop_ex.py  _tmp_nvidia_cosmos_reason1_7b_decent.py  _tmp_nvidia_cosmos_reason1_7b_open_loop.py  _tmp_omlab_vlm_r1_qwen2_5vl_3b_ovd_0321_closed_loop.py  _tmp_omlab_vlm_r1_qwen2_5vl_3b_ovd_0321_closed_loop_2.py  _tmp_omlab_vlm_r1_qwen2_5vl_3b_ovd_0321_open_loop.py  eval_trained_policy.py  test_cosmos_system_closed_loop.py  test_cosmos_system_open_loop.py  test_cosmos_system_open_loop_tetris.py  test_direct_policy.py  test_direct_policy_api.py  test_handwritten_policy.py  test_policy_closed_loop.py  test_policy_open_loop.py  test_policy_optimization.py  test_smoke_openai_controller.py  train_policy_closed_loop.py
scripts/old/: test.py  test_eagle.py
src/generative_policy_proposals/: _ControllerGenerator.py  _ControllerGeneratorOpenAI.py  __init__.py  _eval.py  _policy_optimizer.py  _policy_optimizer_old.py  _rainbow_atari.py  _random_rollouts.py  _replay_buffer.py  _utils.py
src/generative_policy_proposals/action_spaces/: Breakout-v5-action_space.csv  Tetris-v5-action_space.csv  __init.__.py  _action_spaces.py  _load_action_spaces.py
src/generative_policy_proposals/controller_utils/: breakout_utilities.py
src/generative_policy_proposals/eval/: __init__.py  _evaluate_policy.py
wandb/: latest-run
wandb/run-20250918_212504-qgxj64x7/: run-qgxj64x7.wandb
wandb/run-20250918_212504-qgxj64x7/files/: config.yaml  wandb-metadata.json
wandb/run-20250918_212504-qgxj64x7/files/code/scripts/: test_policy_optimization.py
wandb/run-20250918_212504-qgxj64x7/files/runs/ALE/Breakout-v5___policy_optimizer__1__1758230704/: events.out.tfevents.1758230705.t-2000.1888025.0
wandb/run-20250918_212539-bao8vggr/: run-bao8vggr.wandb
wandb/run-20250918_212539-bao8vggr/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20250918_212539-bao8vggr/files/runs/ALE/Breakout-v5___policy_optimizer__1__1758230738/: events.out.tfevents.1758230739.t-2000.1888159.0
