[project]
name = "tunable-cap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.7.1",
    "huggingface-hub>=0.34.3",
    "peft>=0.16.0",
    #"flash-attn>=2.8.2",
    "decord>=0.6.0",
    "transformers", #==4.51.0",
    "ale-py>=0.11.2",
    "gymnasium[other]>=1.2.0",
    "av>=15.0.0",
    "qwen-vl-utils[decord]>=0.0.8",
    "torchvision>=0.22.1",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
prerelease = "if-necessary-or-explicit"
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = [
    { index = "pytorch-stable-cu128" },
]
torchvision = [
    { index = "pytorch-stable-cu128" },
]

[[tool.uv.index]]
name = "pytorch-stable-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = false
